--- a/app/src/main/res/layout/activity_pasang_sewa.xml
+++ b/app/src/main/res/layout/activity_pasang_sewa.xml
@@ -65,7 +65,7 @@
             android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginRight="@dimen/_15sdp"
-            android:inputType="text"/>
+            android:inputType="phone"/>
 
 
         <EditText
@@ -80,7 +80,7 @@
             android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginRight="@dimen/_15sdp"
-            android:inputType="text"/>
+            android:inputType="phone"/>
 
         <EditText
             android:id="@+id/edtdeskripsi"
@@ -132,7 +132,7 @@
             android:fontFamily="@font/quicksand_bold"
             android:paddingLeft="@dimen/_5sdp"
             android:paddingRight="@dimen/_5sdp"
-            android:text="Contact Person"
+            android:text="Foto Barang"
             android:textColor="?colorPrimary" />
 
         <LinearLayout
