--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -75,7 +75,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_login"
             android:hint="Telepon"
-            android:inputType="text"
+            android:inputType="phone"
             android:padding="10dp"
             android:singleLine="true"/>
 
