--- a/app/src/main/res/layout/fragment__pesanan.xml
+++ b/app/src/main/res/layout/fragment__pesanan.xml
@@ -17,7 +17,9 @@
         tools:listitem="@layout/item_row_booked"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="5" />
-
+    <include
+        layout="@layout/layout_kosong"
+        android:visibility="gone"/>
 
 
 </LinearLayout>
