--- a/app/src/main/res/drawable/edbg.xml
+++ b/app/src/main/res/drawable/edbg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="?colorSecondary"/>
+<solid android:color="?colorOnPrimary"/>
     <stroke android:color="?colorPrimaryVariant" android:width="@dimen/_2sdp"/>
     <corners android:radius="@dimen/_5sdp"/>
 </shape>
