--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -8,7 +8,7 @@
         android:title="Home"/>
     <item
         android:id="@+id/pesanan_masuk"
-        android:icon="@drawable/pesanan"
+        android:icon="@drawable/ic_baseline_pending_actions_24"
         android:title="Pesanan Masuk "/>
 
     <item
