--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryVariant">#47ACFC</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondary">#47ACFC</item>
         <item name="colorSecondaryVariant">#AAAAAA</item>
         <item name="colorOnSecondary">#47ACFC</item>
         <!-- Status bar color. -->
