--- a/app/src/main/res/layout/activity_barang.xml
+++ b/app/src/main/res/layout/activity_barang.xml
@@ -19,4 +19,7 @@
         tools:listitem="@layout/item_row_barang"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="5" />
+    <include
+        layout="@layout/layout_kosong"
+        android:visibility="gone"/>
 </LinearLayout>
