--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -34,7 +34,7 @@
                 android:textStyle="bold"
                 android:textSize="@dimen/_18sdp"
                 android:textColor="@color/white"
-                tools:text="Toolbar" />
+                tools:text="E-Rental" />
 
             <ImageButton
                 android:layout_alignParentRight="true"
