--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.ERental" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#47ACFC</item>
+        <item name="colorPrimary">#036DCF</item>
         <item name="colorPrimaryVariant">@color/cardview_shadow_start_color</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/cardview_dark_background</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/cardview_dark_background</item>
         <item name="colorSecondaryVariant">@color/cardview_shadow_start_color</item>
