--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/light_gray"/>
     <stroke android:width="@dimen/_2sdp"
 
-        android:color="?colorPrimary" />
+        android:color="@color/dark_gray" />
     <!--<padding android:left="2dp"-->
     <!--android:top="2dp"-->
     <!--android:right="2dp"-->
     <!--android:bottom="2dp" />-->
-    <corners android:radius="@dimen/_5sdp" />
+    <corners android:radius="@dimen/_10sdp" />
 
 
 
