--- a/app/src/main/res/layout/fragment__profil.xml
+++ b/app/src/main/res/layout/fragment__profil.xml
@@ -4,164 +4,163 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/main"
     android:orientation="vertical"
     tools:context=".Profil.Fragment_Profil">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_profil"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@drawable/topshape"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="@dimen/_55sdp"
-            android:layout_height="@dimen/_55sdp"
-            android:src="@drawable/ic_baseline_account_circle_24"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/quicksand_bold"
-            android:id="@+id/username_profl"
-            android:text="Username"
-            android:textColor="?colorOnSecondary"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:textSize="@dimen/_20sdp"/>
-    </LinearLayout>
-
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="@dimen/_1sdp"-->
-<!--        android:background="?colorOnSecondary"-->
-<!--        android:layout_marginBottom="@dimen/_20sdp"/>-->
-
-<!--   -->
-
-
-    <LinearLayout
-        android:layout_marginTop="@dimen/_2sdp"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:id="@+id/btn_edit_profil"
-        android:background="?android:windowBackground"
-        android:textAlignment="textStart"
-        android:backgroundTint="?colorPrimaryVariant"
-        android:textColor="?colorOnPrimary">
-
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_baseline_edit_24"
-            app:tint="@color/white"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit Profil"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:fontFamily="@font/quicksand_bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15sdp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="@dimen/_2sdp"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:id="@+id/btn_store"
-        android:background="?android:windowBackground"
-        android:textAlignment="textStart"
-        android:backgroundTint="?colorPrimaryVariant"
-        android:textColor="?colorOnPrimary">
-
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_baseline_storefront_24"
-            app:tint="@color/white"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Store"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:fontFamily="@font/quicksand_bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15sdp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="@dimen/_2sdp"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:id="@+id/btn_barangSaya"
-        android:background="?android:windowBackground"
-        android:textAlignment="textStart"
-        android:backgroundTint="?colorPrimaryVariant"
-        android:textColor="?colorOnPrimary">
-
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_baseline_business_center_24"
-            app:tint="@color/white"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Barang Saya"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:fontFamily="@font/quicksand_bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15sdp"/>
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:id="@+id/btn_logout"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_gravity="center_horizontal"
-        android:background="?colorPrimaryVariant"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:fontFamily="@font/quicksand_bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15sdp"
-            android:text="Logout"/>
-        <ImageView
+        <LinearLayout
+            android:layout_margin="@dimen/_20sdp"
+            android:id="@+id/btn_profil"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_baseline_login_24"
-            android:layout_gravity="center"
-            android:scaleType="fitEnd"
-            android:layout_marginRight="@dimen/_15sdp"
-            android:layout_marginLeft="@dimen/_15sdp"
-            app:tint="@color/white" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="@dimen/_55sdp"
+                android:layout_height="@dimen/_55sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:src="@drawable/ic_baseline_account_circle_24" />
+
+            <TextView
+                android:id="@+id/username_profl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:fontFamily="@font/quicksand_bold"
+                android:text="Username"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/_20sdp" />
+        </LinearLayout>
+
+        <!--    <RelativeLayout-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="@dimen/_1sdp"-->
+        <!--        android:background="?colorOnSecondary"-->
+        <!--        android:layout_marginBottom="@dimen/_20sdp"/>-->
+
+        <!--   -->
+
+
+        <LinearLayout
+            android:id="@+id/btn_edit_profil"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_40sdp"
+            android:textAlignment="textStart"
+            android:textColor="?colorOnPrimary">
+
+            <ImageView
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/ic_baseline_edit_24"
+                app:tint="@color/dark_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:fontFamily="@font/quicksand_bold"
+                android:text="Edit Profil"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/_15sdp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn_store"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_40sdp">
+
+            <ImageView
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/ic_baseline_storefront_24"
+                app:tint="@color/dark_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:fontFamily="@font/quicksand_bold"
+                android:text="Store"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/_15sdp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn_barangSaya"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_40sdp">
+
+            <ImageView
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/ic_baseline_business_center_24"
+                app:tint="@color/dark_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:fontFamily="@font/quicksand_bold"
+                android:text="Barang Saya"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/_15sdp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_40sdp">
+
+            <ImageView
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/ic_baseline_login_24"
+                app:tint="@color/dark_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:fontFamily="@font/quicksand_bold"
+                android:text="Logout"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/_15sdp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
